# learnOpenGLDemos

./: .gitignore  LICENSE  README.md
cmake/modules/: findGLAD.cmake
demo01/: 01-helloWindow.cc  CMakeLists.txt  CMakeLists.txt.notWorking
demo01b/: CMakeLists.txt
demo02/: CMakeLists.txt  hello_window_clear.cc  make.compile.building.sh
demo03/: CMakeLists.txt  make.compile.building.sh
includes/glad/: glad.h
libs/: glad.c
scripts/: environment.txt
